Release 25w07a (snapshot)