@@ -1,47 +1,53 @@
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import javax.annotation.Nullable;
+import com.mojang.brigadier.StringReader;
+import com.mojang.brigadier.arguments.ArgumentType;
+import com.mojang.brigadier.context.CommandContext;
+import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
+import java.util.Arrays;
+import java.util.Collection;
 
-public record ep(List<ep.a> b) {
-   public static final ep a = new ep(List.of());
-   private static final int c = 8;
-   private static final int d = 16;
+public class ep implements ArgumentType<ep.a> {
+   private static final Collection<String> c = Arrays.asList("0", "~", "~-5");
+   public static final SimpleCommandExceptionType a = new SimpleCommandExceptionType(wy.c("argument.angle.incomplete"));
+   public static final SimpleCommandExceptionType b = new SimpleCommandExceptionType(wy.c("argument.angle.invalid"));
 
-   public ep(vu $$0) {
-      this($$0.a(vu.a(ArrayList::new, 8), ep.a::new));
+   public static ep a() {
+      return new ep();
    }
 
-   public void a(vu $$0) {
-      $$0.a(this.b, ($$0x, $$1) -> $$1.a($$0x));
+   public static float a(CommandContext<ej> $$0, String $$1) {
+      return ((ep.a)$$0.getArgument($$1, ep.a.class)).a((ej)$$0.getSource());
    }
 
-   public static ep a(xq<?> $$0, ep.b $$1) {
-      List<ep.a> $$2 = $$0.a().stream().map($$1x -> {
-         xk $$2x = $$1.sign($$1x.c());
-         return $$2x != null ? new ep.a($$1x.a(), $$2x) : null;
-      }).filter(Objects::nonNull).toList();
-      return new ep($$2);
-   }
-
-   public List<ep.a> a() {
-      return this.b;
-   }
-
-   public static record a(String a, xk b) {
-      public a(vu $$0) {
-         this($$0.d(16), xk.a($$0));
-      }
-
-      public void a(vu $$0) {
-         $$0.a(this.a, 16);
-         xk.a($$0, this.b);
+   public ep.a a(StringReader $$0) throws CommandSyntaxException {
+      if (!$$0.canRead()) {
+         throw a.createWithContext($$0);
+      } else {
+         boolean $$1 = go.b($$0);
+         float $$2 = $$0.canRead() && $$0.peek() != ' ' ? $$0.readFloat() : 0.0F;
+         if (!Float.isNaN($$2) && !Float.isInfinite($$2)) {
+            return new ep.a($$2, $$1);
+         } else {
+            throw b.createWithContext($$0);
+         }
       }
    }
 
-   @FunctionalInterface
-   public interface b {
-      @Nullable
-      xk sign(String var1);
+   public Collection<String> getExamples() {
+      return c;
+   }
+
+   public static final class a {
+      private final float a;
+      private final boolean b;
+
+      a(float $$0, boolean $$1) {
+         this.a = $$0;
+         this.b = $$1;
+      }
+
+      public float a(ej $$0) {
+         return azm.h(this.b ? this.a + $$0.k().k : this.a);
+      }
    }
 }
