@@ -3,40 +3,31 @@ import com.mojang.brigadier.arguments.ArgumentType;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
-import com.mojang.brigadier.suggestion.Suggestions;
-import com.mojang.brigadier.suggestion.SuggestionsBuilder;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.concurrent.CompletableFuture;
+import java.util.List;
 
-public class fv implements ArgumentType<String> {
-   private static final Collection<String> a = Arrays.asList("foo", "123");
-   private static final DynamicCommandExceptionType b = new DynamicCommandExceptionType($$0 -> wy.b("team.notFound", $$0));
+public class fv implements ArgumentType<xv> {
+   private static final Collection<String> b = List.of("{bold: true}", "{color: 'red'}", "{}");
+   public static final DynamicCommandExceptionType a = new DynamicCommandExceptionType($$0 -> wy.b("argument.style.invalid", $$0));
+   private final jh.a c;
 
-   public static fv a() {
-      return new fv();
+   private fv(jh.a $$0) {
+      this.c = $$0;
    }
 
-   public static ffq a(CommandContext<ei> $$0, String $$1) throws CommandSyntaxException {
-      String $$2 = (String)$$0.getArgument($$1, String.class);
-      ffv $$3 = ((ei)$$0.getSource()).l().aJ();
-      ffq $$4 = $$3.b($$2);
-      if ($$4 == null) {
-         throw b.create($$2);
-      } else {
-         return $$4;
-      }
+   public static xv a(CommandContext<ej> $$0, String $$1) {
+      return (xv)$$0.getArgument($$1, xv.class);
    }
 
-   public String a(StringReader $$0) throws CommandSyntaxException {
-      return $$0.readUnquotedString();
+   public static fv a(ef $$0) {
+      return new fv($$0);
    }
 
-   public <S> CompletableFuture<Suggestions> listSuggestions(CommandContext<S> $$0, SuggestionsBuilder $$1) {
-      return $$0.getSource() instanceof en ? en.b(((en)$$0.getSource()).r(), $$1) : Suggestions.empty();
+   public xv a(StringReader $$0) throws CommandSyntaxException {
+      return en.a(xv.b.b, this.c, a, $$0);
    }
 
    public Collection<String> getExamples() {
-      return a;
+      return b;
    }
 }
